[gd_scene load_steps=54 format=3 uid="uid://d0kuhrlrlq665"]

[ext_resource type="Script" path="res://sadness.gd" id="1_ds43c"]
[ext_resource type="Texture2D" uid="uid://d3r63hopulkps" path="res://Sadness_sprites/sadness_hit_sheet.png" id="2_4pxl6"]
[ext_resource type="Texture2D" uid="uid://bvogya54qehed" path="res://Sadness_sprites/sadness_hidden_sheet.png" id="2_5f4om"]
[ext_resource type="Texture2D" uid="uid://cdclpcf1cgtr8" path="res://Sadness_sprites/sadness_idle_sheet.png" id="2_vlkh6"]
[ext_resource type="PackedScene" uid="uid://dk1djiye3iyvm" path="res://stats.tscn" id="3_ers66"]
[ext_resource type="PackedScene" uid="uid://pjgm2mcjmuj2" path="res://hitbox.tscn" id="4_5xjmi"]
[ext_resource type="Texture2D" uid="uid://b0x13viisea2j" path="res://Sadness_sprites/sadness_wakeup_sheet.png" id="4_yh8d7"]
[ext_resource type="PackedScene" uid="uid://74g62hupy2x0" path="res://hurtbox.tscn" id="5_c1fs4"]
[ext_resource type="Texture2D" uid="uid://c555v4b38cmwr" path="res://Sadness_sprites/sadness_walk_sheet.png" id="6_mniyj"]
[ext_resource type="PackedScene" uid="uid://b6j016gflf0kf" path="res://damage_taken.tscn" id="7_ralsr"]
[ext_resource type="Script" path="res://Finite_Machine/finite_state_machine.gd" id="11_oa0ke"]
[ext_resource type="Script" path="res://plant_idle_state.gd" id="12_wpd4y"]
[ext_resource type="Script" path="res://plant_walk_state.gd" id="13_8iml3"]
[ext_resource type="Script" path="res://plant_attack_state.gd" id="14_hrxjt"]
[ext_resource type="Script" path="res://State_debugger.gd" id="15_obarq"]
[ext_resource type="Script" path="res://HideState.gd" id="15_riysw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_terv6"]
atlas = ExtResource("2_4pxl6")
region = Rect2(0, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shx3x"]
atlas = ExtResource("2_4pxl6")
region = Rect2(60, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sigk7"]
atlas = ExtResource("2_4pxl6")
region = Rect2(120, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lkim"]
atlas = ExtResource("2_4pxl6")
region = Rect2(180, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnamp"]
atlas = ExtResource("2_4pxl6")
region = Rect2(240, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d15ch"]
atlas = ExtResource("2_4pxl6")
region = Rect2(300, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eofn3"]
atlas = ExtResource("2_4pxl6")
region = Rect2(360, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqi44"]
atlas = ExtResource("2_4pxl6")
region = Rect2(420, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7baf"]
atlas = ExtResource("2_4pxl6")
region = Rect2(480, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt2r7"]
atlas = ExtResource("2_4pxl6")
region = Rect2(540, 0, 60, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yj8i"]
atlas = ExtResource("2_5f4om")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_57lut"]
atlas = ExtResource("2_5f4om")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2airo"]
atlas = ExtResource("2_5f4om")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkamj"]
atlas = ExtResource("2_vlkh6")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnd8a"]
atlas = ExtResource("2_vlkh6")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlbfn"]
atlas = ExtResource("2_vlkh6")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ispne"]
atlas = ExtResource("4_yh8d7")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mxnw"]
atlas = ExtResource("4_yh8d7")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aau7"]
atlas = ExtResource("4_yh8d7")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47nrc"]
atlas = ExtResource("4_yh8d7")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_66d11"]
atlas = ExtResource("4_yh8d7")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y50pv"]
atlas = ExtResource("4_yh8d7")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjjpd"]
atlas = ExtResource("6_mniyj")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jq3vg"]
atlas = ExtResource("6_mniyj")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d71mv"]
atlas = ExtResource("6_mniyj")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mieui"]
atlas = ExtResource("6_mniyj")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_srm4e"]
atlas = ExtResource("6_mniyj")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xpeo"]
atlas = ExtResource("6_mniyj")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r0tq"]
atlas = ExtResource("6_mniyj")
region = Rect2(288, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox7i6"]
atlas = ExtResource("6_mniyj")
region = Rect2(336, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f7xd"]
atlas = ExtResource("6_mniyj")
region = Rect2(384, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sgnd"]
atlas = ExtResource("6_mniyj")
region = Rect2(432, 0, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2gbxg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_terv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shx3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sigk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lkim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnamp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d15ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eofn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqi44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7baf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt2r7")
}],
"loop": false,
"name": &"attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yj8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57lut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2airo")
}],
"loop": false,
"name": &"hidden",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkamj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnd8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlbfn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ispne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mxnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aau7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47nrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y50pv")
}],
"loop": false,
"name": &"wakeup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjjpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jq3vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d71mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mieui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srm4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xpeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r0tq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox7i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f7xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sgnd")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ixtl"]
size = Vector2(28, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_pr4hp"]
radius = 24.0208

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hkc4"]
size = Vector2(26, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijdb7"]
size = Vector2(28, 28)

[node name="Sadness" type="CharacterBody2D"]
position = Vector2(129, 74)
collision_layer = 4
script = ExtResource("1_ds43c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2gbxg")
animation = &"attack"
frame = 9
frame_progress = 1.0
flip_h = true

[node name="Stats" parent="." instance=ExtResource("3_ers66")]
max_health = 10

[node name="Hitbox" parent="." instance=ExtResource("4_5xjmi")]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_1ixtl")

[node name="AttackHitbox" parent="." instance=ExtResource("4_5xjmi")]
position = Vector2(15, 0)
collision_layer = 0
collision_mask = 8
damage = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2(-11, -3)
shape = SubResource("CircleShape2D_pr4hp")
debug_color = Color(0.423529, 0.00392157, 0.305882, 0.419608)

[node name="Hurtbox" parent="." instance=ExtResource("5_c1fs4")]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(4, 1)
shape = SubResource("RectangleShape2D_8hkc4")

[node name="DamageTaken" parent="." instance=ExtResource("7_ralsr")]
visible = false
offset_left = -3.0
offset_top = -24.0
offset_right = -3.0
offset_bottom = -24.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_ijdb7")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("11_oa0ke")
state = NodePath("HideState")

[node name="IdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "vision_cast")]
script = ExtResource("12_wpd4y")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
vision_cast = NodePath("../../RayCast2D")

[node name="IdleTimer" type="Timer" parent="FiniteStateMachine/IdleState"]
one_shot = true

[node name="WalkState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("13_8iml3")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="WalkTimer" type="Timer" parent="FiniteStateMachine/WalkState"]
wait_time = 2.0
one_shot = true

[node name="AttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("14_hrxjt")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="HideState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animator", "vision_cast")]
script = ExtResource("15_riysw")
animator = NodePath("../../AnimatedSprite2D")
vision_cast = NodePath("../../RayCast2D")

[node name="State_debugger" type="Label" parent="."]
visible = false
offset_left = -18.0
offset_top = -40.0
offset_right = 22.0
offset_bottom = -17.0
text = "sasa"
script = ExtResource("15_obarq")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(128, 1)
collision_mask = 2

[node name="LostSightTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="LostSightTimer" to="FiniteStateMachine/IdleState" method="_on_lost_sight_timer_timeout"]
